--- a/index.html
+++ b/index.html
@@ -1,24 +1,40 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+	"http://www.w3.org/TR/html4/loose.dtd">
 <html>
-	<head>
-		<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-		<title>Morgen Im Herbst</title>
-		<style type="text/css" media="screen">
-				body { 	
-					background-color: Black;
-				}
-					
-				#mycontainer {
-					width : 900px;
-					margin: 0px auto 0px auto;
-				}	
-		</style>
-	</head>
+
+<head>
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
+	<title>garyhodgson.com/ubiquity/</title>
+	<link rel="stylesheet" href="css/ubiquity.css" type="text/css" media="screen"  charset="utf-8">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+  </head>
 	<body>
-		<div id="mycontainer">
-<script type="text/javascript" src="http://seadragon.com/ajax/embed.js"></script><script type="text/javascript">Seadragon.embed("900px", "700px", "http://garyhodgson.com/photography/MorgenImHerbst2/GeneratedImages/dzc_output.xml", 4080, 3593, 256, 1, "jpg", [[0,0,4080,3593,0,9],[0,800,800,309,0,10],[1947,922,533,800,0,10],[3206,2754,526,800,0,10],[2151,191,800,533,0,10],[3334,0,533,800,0,10],[1035,800,800,533,0,10],[2151,2061,800,505,0,10],[1035,2833,800,494,0,10],[2854,1109,800,414,0,10],[2151,2714,533,800,0,10],[3551,1766,529,800,0,10],[946,1722,533,800,0,10],[0,1880,800,500,0,10],[0,0,800,533,0,10],[1035,191,800,319,0,10],[0,3060,800,533,0,10],[0,800,800,309,0,11],[1947,922,533,800,0,11],[3206,2754,526,800,0,11],[2151,191,800,533,0,11],[3334,0,533,800,0,11],[1035,800,800,533,0,11],[2151,2061,800,505,0,11],[1035,2833,800,494,0,11],[2854,1109,800,414,0,11],[2151,2714,533,800,0,11],[3551,1766,529,800,0,11],[946,1722,533,800,0,11],[0,1880,800,500,0,11],[0,0,800,533,0,11],[1035,191,800,319,0,11],[0,3060,800,533,0,11],[0,800,800,309,0,12],[1947,922,533,800,0,12],[3206,2754,526,800,0,12],[2151,191,800,533,0,12],[3334,0,533,800,0,12],[1035,800,800,533,0,12],[2151,2061,800,505,0,12],[1035,2833,800,494,0,12],[2854,1109,800,414,0,12],[2151,2714,533,800,0,12],[3551,1766,529,800,0,12],[946,1722,533,800,0,12],[0,1880,800,500,0,12],[0,0,800,533,0,12],[1035,191,800,319,0,12],[0,3060,800,533,0,12]]);</script>		
+	
+	<div id="container">
+
+		<a href="/ubiquity">
+			<img src="images/ubiquity_side.png"/>
+		</a>
+		
+		<div id="title">
+			A place to collect my various <a href="https://ubiquity.mozilla.com/">Ubiquity</a> commands.<br><br>
+			<span id="feedback"><a href="mailto:contact@garyhodgson.com">Feedback</a></span>
 		</div>
 		
-	</body>
+		<div id="cmdList">
+			<ul>
+				<li><a href="http://gist.github.com/19959">Amazon Local - Blended Search</a></li>
+				<li><a href="http://gist.github.com/24257">Google Bookmarks</a></li>
+				<li><a href="http://gist.github.com/24256">Oracle Documentation</a></li>
+				<li><a href="http://garyhodgson.github.com/ubiquity-rtm-api">Remember The Milk - Full Version</a></li>
+				<li><a href="http://gist.github.com/24258">Remember The Milk - Bookmarklet Version</a></li>
+				<li><a href="http://gist.github.com/17245">TiddlyWiki</a></li>
+				<li><a href="http://gist.github.com/20945">Mininova and Piratebay Torrent Search</a></li>
+				<li><a href="http://gist.github.com/19964">Ebookshare Torrent Search</a></li>
+				<li><a href="http://gist.github.com/20103">Bit.ly</a></li>
+			</ul>
+		</div>
+	</div>
+</body>
+
 </html>
