--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
-	<title>garyhodgson.com/ubiquity/</title>
+	<title>garyhodgson.github.com</title>
 	<link rel="stylesheet" href="css/ubiquity.css" type="text/css" media="screen"  charset="utf-8">
 	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
