a few css changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: garyhodgson.github.com
  
  
   <h1>Ubiquity Commands</h1>
-  <ul class="posts">
+  <ul class="commands">
 			<li><a href="http://garyhodgson.github.com/ubiquity-rtm-api">Remember The Milk</a></li>
 			<li><a href="http://gist.github.com/19959">Amazon Local - Blended Search</a></li>
 			<li><a href="http://gist.github.com/24257">Google Bookmarks</a></li>
@@ -27,7 +27,7 @@ title: garyhodgson.github.com
 	</ul>
 	
 	<h1>Latest Twitter Updates</h1>
-	<ul class="posts" id="twitter_update_list"><img src="images/ajax-loader.gif"></ul>
+	<ul class="tweets" id="twitter_update_list"><img src="images/ajax-loader.gif"></ul>
 
 </div>
   
