--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@ title: garyhodgson.github.com
 
 <div id="home">
 
-  <h1>Blog Posts</h1>
+  <h1>Latest Blog Posts <a href="posts.html">&nbsp;&#0187;</a></h1>
   <ul class="posts">
-    {% for post in site.posts %}
+    {% for post in site.posts limit:5 %}
       <li><span class='time'>{{ post.date | date_to_string }}</span> <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
@@ -15,10 +15,10 @@ title: garyhodgson.github.com
   <h1>Ubiquity Commands</h1>
   <ul class="commands">
 			<li><a href="http://garyhodgson.github.com/ubiquity-rtm-api">Remember The Milk</a></li>
+			<li><a href="http://gist.github.com/24258">Remember The Milk - Bookmarklet Version</a></li>
 			<li><a href="http://gist.github.com/19959">Amazon Local - Blended Search</a></li>
 			<li><a href="http://gist.github.com/24257">Google Bookmarks</a></li>
 			<li><a href="http://gist.github.com/24256">Oracle Documentation</a></li>
-			<li><a href="http://gist.github.com/24258">Remember The Milk - Bookmarklet Version</a></li>
 			<li><a href="http://gist.github.com/17245">TiddlyWiki</a></li>
 			<li><a href="http://gist.github.com/20945">Mininova and Piratebay Torrent Search</a></li>
 			<li><a href="http://gist.github.com/19964">Ebookshare Torrent Search</a></li>
@@ -26,7 +26,7 @@ title: garyhodgson.github.com
 	</ul>
 	
 	
-	<h1>Latest Twitter Updates</h1>
+	<h1>Latest Twitter Updates <a href="http://twitter.com/garyhodgson">&nbsp;&#0187;</a></h1>
 	<ul class="tweets" id="twitter_update_list"><img src="images/ajax-loader.gif"></ul>
 
 </div>
