reprap blog back online

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <div class="row">
 
         <div class="span4 block">
-          <!-- <a href="/reprap"> -->
+          <a href="http://garyhodgson.github.io/reprap">
             <img src="img/blog.gif">
-            <h3>[Offline] RepRap Blog</h3>
-          <!-- </a> -->
+            <h3>RepRap Blog</h3>
+          </a>
         </div>
 
         <div class="span4 block">
