github.io change

--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
       <div class="row">
 
         <div class="span4 block">
-          <a href="http://garyhodgson.github.com/frep-csg.js/">
+          <a href="http://garyhodgson.github.io/frep-csg.js/">
             <img src="img/frep_csg.gif">
             <h3>FREP CSG</h3>
           </a>
         </div>
 
         <div class="span4 block">
-          <a href="http://garyhodgson.github.com/openscad.net/">
+          <a href="http://garyhodgson.github.io/openscad.net/">
             <img src="img/openscad_net.gif">
             <h3>[Deprecated] OpenSCAD.net</h3>
           </a>
