--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row">
 
         <div class="span4 block">
-          <a href="https://garyhodgson.github.io/woodwork">
+          <a href="https://www.flickr.com/photos/garyhodgson/albums/72177720303483858">
             <img src="img/woodwork.gif">
             <h3>Woodwork</h3>
           </a>
