--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="row">
 
         <div class="span4 block">
-          <a href="https://www.flickr.com/photos/garyhodgson/albums/72177720303483858">
+          <a href="http://woodworking.garyhodgson.com">
             <img src="img/woodwork.gif">
             <h3>Woodwork</h3>
           </a>
@@ -40,7 +40,7 @@
         </div>
 
         <div class="span4 block">
-          <a href="https://flic.kr/s/aHsmTyJYaH">
+          <a href="http://photography.garyhodgson.com">
             <img src="img/photography.gif">
             <h3>Photography</h3>
           </a>
