add available link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
     <div class="container">
 
+      <br>
 
       <div class="row">
 
@@ -33,16 +34,16 @@
         </div>
 
         <div class="span4 block">
-          <a href="https://www.instagram.com/woodbeatnik/">
-            <img src="img/woodwork_instagram.gif">
-            <h3>Woodwork on Instagram</h3>
+          <a href="http://available.garyhodgson.com">
+            <img src="img/available.jpg">
+            <h3>Available Woodwork</h3>
           </a>
         </div>
 
         <div class="span4 block">
-          <a href="http://photography.garyhodgson.com">
-            <img src="img/photography.gif">
-            <h3>Photography</h3>
+          <a href="https://www.instagram.com/woodbeatnik/">
+            <img src="img/woodwork_instagram.gif">
+            <h3>Instagram</h3>
           </a>
         </div>
 
@@ -52,6 +53,14 @@
       <br>
 
       <div class="row">
+
+
+        <div class="span4 block">
+          <a href="http://photography.garyhodgson.com">
+            <img src="img/photography.gif">
+            <h3>Photography</h3>
+          </a>
+        </div>
 
         <div class="span4 block">
           <a href="http://garyhodgson.github.io/reprap">
@@ -61,19 +70,11 @@
         </div>
 
         <div class="span4 block">
-          <a href="http://garyhodgson.github.io/thingtracker.net">
-            <img src="img/thing_tracker_network.gif">
-            <h3>[Deprecated] Thing Tracker Network</h3>
+          <a href="https://reprap.org/wiki/DeveloperBookshelf">
+            <img src="img/developer_bookshelf.gif">
+            <h3>RepRap Developer Bookshelf</h3>
           </a>
         </div>
-
-        <div class="span4 block">
-          <a href="https://github.com/garyhodgson/Development-Tracker">
-            <img src="img/development_tracker.gif">
-            <h3>[Deprecated] RepRap Development Tracker</h3>
-          </a>
-        </div>
-
 
       </div>
 
@@ -81,6 +82,14 @@
       <br>
 
       <div class="row">
+
+        <div class="span4 block">
+          <a href="http://garyhodgson.github.io/thingtracker.net">
+            <img src="img/thing_tracker_network.gif">
+            <h3>[Deprecated] Thing Tracker Network</h3>
+          </a>
+        </div>
+
 
         <div class="span4 block">
           <a href="https://github.com/garyhodgson/prusa_mendel_visual_instructions/releases/tag/v5">
@@ -93,13 +102,6 @@
           <a href="https://github.com/garyhodgson/wades_geared_extruder_visual_instructions/releases/tag/v1">
             <img src="img/wades_visual_instructions.gif">
             <h3>[Deprecated] Wade's Geared Extruder<br>Visual Instructions</h3>
-          </a>
-        </div>
-
-        <div class="span4 block">
-          <a href="https://reprap.org/wiki/DeveloperBookshelf">
-            <img src="img/developer_bookshelf.gif">
-            <h3>RepRap Developer Bookshelf</h3>
           </a>
         </div>
 
